--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+body {
+  /* background-color: #f4f6fc; */
+  background-color: #e2e3f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.img-width {
+  width: 450px;
+  height: 450px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.login-id {
+  width: 150%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#cardss {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px rgba(134, 132, 132, 0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width:767px) {
+  .img-div {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (min-width:767px) and (max-width:992px) {
+  .img-div {
+    display: none;
   }
+}
+
+.error {
+  width: 100vw;
+  height: 100vh;
+}
+
+.error>img {
+  width: 100%;
+  height: 100%;
 }
